projects/compiler/test/typechecker/funcdecl/error_macro_invalid_return_type.out
Error at %FILE_NAME%:4:6
Invalid return type for @macro function
  |  func uhOh(): Int = 1234
          ^
Macros must return an instance of 'meta.InjectedCode'
