projects/compiler/test/typechecker/funcdecl/error_macro_invalid_return_type.abra
import macro from "meta"

@macro
func uhOh(): Int = 1234
